syntax = "proto3";

option go_package = "proto;proto";

service EmployeeService {
    // Server streaming:
    rpc Employees (GetAllRequest) returns (stream EmployeeResponse);
    rpc EmployeeByID (ByIDRequest) returns (EmployeeResponse);
    rpc AddEmployee (EmployeeRequest) returns (EmployeeResponse);
    // Bidirectional streaming:
    rpc AddEmployees  (stream EmployeeRequest) returns (stream EmployeeResponse);
    // Client streaming:
    rpc AddAttachment (stream AttachmentRequest) returns (Attachment);
    rpc AttachmentByID (ByIDRequest) returns (Attachment);
    rpc DeleteEmployee (ByIDRequest) returns (EmployeeResponse);
    rpc UpdateEmployee (EmployeeRequest) returns (EmployeeResponse);

    rpc AddVacation(VacationRequest) returns (Vacation);
}

message Employee {
    string ID = 1;
    int32 badgeNumber = 2;
    string firstName = 3;
    string lastName = 4;
    string countryCode = 5;
    float vacationAccrualRate = 6;
    float vacationAccrued = 7;
    repeated Vacation vacations = 8;
    repeated string documents = 9;
}

message Vacation {
    string ID = 1;
    int64 startDate = 2;
    float durationHours = 3;
    bool approved = 4;
    bool cancelled = 5;
}

message VacationRequest {
    string userID  = 1;
    int64 startDate = 2;
    float durationHours = 3;
}

message Attachment {
    string ID = 1;
    string userID = 2;
    string filename = 3;
    bytes data = 4;
    int64 createdAt = 5;
}

message GetAllRequest {}


message ByIDRequest {
    string ID = 1;
}

message EmployeeRequest {
    Employee employee = 1;
}

message EmployeeResponse {
    Employee employee = 1;
}

message AttachmentRequest {
    string userID = 1;
    string filename = 2;
    bytes data = 3;
}